--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,4 @@
 ja:
-  time:
-    formats:
-      default: "%Y/%m/%d %H:%M:%S"
   date:
     formats:
-      default: "%Y年%m月%d日"
+      default: "%Y/%m/%d"
